# TheAdventure

./: .clang-format  .gitignore  CMakeLists.txt  Comenzi git.txt  Da.txt  De facut zilnic.txt  MUie.txt  Test.txt  ma.txt
cmake/: EmbedResources.cmake
res/: CMakeLists.txt
src/: CMakeLists.txt  animated_sprite.cpp  animated_sprite.h  codes.h  events.h  game.cpp  game.h  hero.cpp  hero.h  i_aggravatable.cpp  i_aggravatable.h  i_attacker.h  i_collidable.cpp  i_collidable.h  i_destroyable.h  i_input_handler.cpp  i_input_handler.h  i_renderable.cpp  i_renderable.h  i_thing.cpp  i_thing.h  main.cpp  map.cpp  map.h  renderer.cpp  renderer.h  slime.cpp  slime.h  sound.cpp  sound.h  sprite.cpp  sprite.h
